buildscript {
    ext {
        springBootVersion = "4.0.0-RC1"
        lombokVersion = "1.18.42"
        postgresVersion = "42.7.8"
        jUnitVersion = "6.0.0"
        archUnitVersion = "1.4.1"
        jsonwebtokenVersion = "0.12.6"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0-RC1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.learn'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //spring
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-liquibase', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion

    // JWT (JJWT)
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: jsonwebtokenVersion
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: jsonwebtokenVersion
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: jsonwebtokenVersion

    //lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion

    //database
    implementation group: 'org.postgresql', name: 'postgresql', version: postgresVersion

    //test
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: jUnitVersion
    testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5', version: archUnitVersion
}

tasks.named('test') {
    useJUnitPlatform()
}
